--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.3",
     "@astrojs/mdx": "^3.1.5",
     "@astrojs/rss": "^4.0.7",
     "@astrojs/sitemap": "^3.1.6",
+    "@astrojs/tailwind": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^4.15.4",
-    "@astrojs/check": "^0.9.3",
+    "pagefind": "^1.1.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-math": "^6.0.0",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.4"
   }
 }
