--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -25,13 +25,24 @@ jobs:
       uses: 'google-github-actions/setup-gcloud@v1'
 
     - name: Configure Docker
-      run: gcloud auth configure-docker
+      run: |
+        gcloud auth configure-docker --quiet
+        echo "GOOGLE_APPLICATION_CREDENTIALS=${{ steps.auth.outputs.credentials_file_path }}" >> $GITHUB_ENV
+
+    - name: Debug Information
+      run: |
+        gcloud auth list
+        gcloud config list
+        gcloud projects list
+        gcloud container images list
 
     - name: Build Docker image
       run: docker build . -t gcr.io/neural-diwan-435305/astro-blog:${{ github.sha }}
 
     - name: Push Docker image
-      run: docker push gcr.io/neural-diwan-435305/astro-blog:${{ github.sha }}
+      run: |
+        echo ${{ secrets.GCP_SA_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
+        docker push gcr.io/neural-diwan-435305/astro-blog:${{ github.sha }}
 
     - name: 'Deploy to GKE'
       run: |
