--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,32 +16,38 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Setup gcloud CLI
-      uses: google-github-actions/setup-gcloud@v1
+    - name: 'Create SA key JSON file'
+      run: echo '${{ secrets.GCP_SA_KEY }}' > sa_key.json
+
+    - name: 'Set up Cloud SDK'
+      uses: 'google-github-actions/setup-gcloud@v1'
       with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        service_account_key: sa_key.json
         project_id: ${{ env.PROJECT_ID }}
 
-    - name: Verify Google Cloud authentication
+    - name: 'Use gcloud CLI'
       run: |
+        gcloud info
         gcloud auth list
         gcloud config list
         gcloud projects list
-        gcloud container images list
 
     - name: Configure Docker
-      run: gcloud auth configure-docker --quiet
+      run: |
+        gcloud auth configure-docker gcr.io --quiet
 
     - name: Build Docker image
       run: docker build . -t gcr.io/${{ env.PROJECT_ID }}/astro-blog:${{ github.sha }}
 
     - name: Push Docker image
-      run: |
-        gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
-        docker push gcr.io/${{ env.PROJECT_ID }}/astro-blog:${{ github.sha }}
+      run: docker push gcr.io/${{ env.PROJECT_ID }}/astro-blog:${{ github.sha }}
 
     - name: Get GKE credentials
       run: gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} --zone ${{ env.GKE_ZONE }}
 
     - name: Deploy to GKE
       run: kubectl set image deployment/astro-blog astro-blog=gcr.io/${{ env.PROJECT_ID }}/astro-blog:${{ github.sha }}
+
+    - name: Clean up
+      if: always()
+      run: rm sa_key.json
